--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -23,6 +23,7 @@ schedules:
 # Global variables
 variables:
   buildConfiguration: Release
+  ContinuousIntegrationBuild: true
   dotnetCoreSdk5Version: 5.0.103
   relativeTracerHome: /src/bin/windows-tracer-home
   relativeArtifacts: /src/bin/artifacts
