--- a/.azure-pipelines/ultimate-pipeline.yml
+++ b/.azure-pipelines/ultimate-pipeline.yml
@@ -303,9 +303,9 @@ stages:
     strategy:
       matrix:
         x64:
-          buildPlatform: x64
+          platform: x64
         x86:
-          buildPlatform: x86
+          platform: x86
 
     steps:
     - template: steps/install-dotnet-sdks.yml
@@ -337,15 +337,15 @@ stages:
     strategy:
       matrix:
         x64:
-          buildPlatform: x64
+          platform: x64
           enable32bit: false
         x86:
-          buildPlatform: x86
+          platform: x86
           enable32bit: true
     pool:
       vmImage: windows-2019
     variables:
-      relativeMsiOutputDirectory: $(relativeArtifacts)/$(buildPlatform)/en-us
+      relativeMsiOutputDirectory: $(relativeArtifacts)/$(platform)/en-us
 
     steps:
 
@@ -355,7 +355,7 @@ stages:
     - task: DownloadPipelineArtifact@2
       displayName: Download MSI
       inputs:
-        artifact: windows-msi-$(buildPlatform)
+        artifact: windows-msi-$(platform)
         patterns: '**/*.msi'
         path: $(System.DefaultWorkingDirectory)/$(relativeMsiOutputDirectory)
 
