Add support for x86 tests
We have to use the x86 version of dotnet.exe, to run in IIS express. So use the x86 version version on Windows when running x86 tests

--- a/test/Datadog.Trace.ClrProfiler.IntegrationTests/applicationHost.config
+++ b/test/Datadog.Trace.ClrProfiler.IntegrationTests/applicationHost.config
@@ -1021,7 +1021,7 @@
         <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" responseBufferLimit="0" />
         <add name="StaticFile" path="*" verb="*" modules="StaticFileModule,DefaultDocumentModule,DirectoryListingModule" resourceType="Either" requireAccess="Read" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments="[RELATIVE_SAMPLE_PATH]" stdoutLogEnabled="false" stdoutLogFile=".\stdout" hostingModel="[HOSTING_MODEL]" />
+      <aspNetCore processPath="[DOTNET]" arguments="[RELATIVE_SAMPLE_PATH]" stdoutLogEnabled="false" stdoutLogFile=".\stdout" hostingModel="[HOSTING_MODEL]" />
     </system.webServer>
   </location>
 </configuration>
