Consolidate service names to dd-trace-dotnet-third-party

--- a/.azure-pipelines/third-party-test-suites.yml
+++ b/.azure-pipelines/third-party-test-suites.yml
@@ -23,6 +23,7 @@ variables:
   NugetPackageDirectory: $(System.DefaultWorkingDirectory)/packages
   relativeNugetPackageDirectory: packages
   dotnetToolTag: build-dotnet-tool
+  testServiceName: dd-trace-dotnet-third-party
 
 # Declare the datadog agent as a resource to be used as a pipeline service
 resources:
@@ -217,13 +218,13 @@ stages:
       condition: startsWith(variables['imageName'], 'windows')
 
     - script: |
-        dd-trace --dd-env=CI --dd-service=npgsql.tests --dd-version=$(tagName) -- dotnet "test npgsql/test/Npgsql.Tests --logger trx;LogFileName=npgsql.tests.$(tagName).trx --results-directory npgsql/test/results"
+        dd-trace --dd-env=CI --dd-service=$(testServiceName) --dd-version=$(tagName) -- dotnet "test npgsql/test/Npgsql.Tests --logger trx;LogFileName=npgsql.tests.$(tagName).trx --results-directory npgsql/test/results"
       env:
         DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
       displayName: Test
 
     - script: |
-        dd-trace --dd-env=CI --dd-service=npgsql.plugintests --dd-version=$(tagName) -- dotnet "test npgsql/test/Npgsql.PluginTests --logger trx;LogFileName=npgsql.plugintests.$(os).$(tagName).trx --results-directory npgsql/test/results"
+        dd-trace --dd-env=CI --dd-service=$(testServiceName) --dd-version=$(tagName) -- dotnet "test npgsql/test/Npgsql.PluginTests --logger trx;LogFileName=npgsql.plugintests.$(os).$(tagName).trx --results-directory npgsql/test/results"
       env:
         DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
       displayName: Test Plugins
