--- a/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj
+++ b/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="guid_test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Directory.Build.props" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
