--- a/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj.filters
+++ b/test/Datadog.NativeLoader.Tests/Datadog.NativeLoader.Tests.vcxproj.filters
@@ -21,5 +21,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Directory.Build.props" />
   </ItemGroup>
 </Project>
